fix: close-button visibility

--- a/blocks/close-button/close-button.css
+++ b/blocks/close-button/close-button.css
@@ -1,4 +1,9 @@
 .close-button {
+    display: none;
+}
+
+@media screen and (max-width: 700px) {
+    .close-button {
     align-self: flex-end;
     width: 35px;
     height: 35px;
@@ -11,6 +16,7 @@
     position: fixed;
     top: 3%;
     right: 3%;
+}
 }
 
 .close-button:hover {
